--- a/lib/css/welcome.scss
+++ b/lib/css/welcome.scss
@@ -1,4 +1,5 @@
 .welcome {
+  display: block;
   font-size: 24px;
   margin: 10px;
 }
@@ -7,4 +8,19 @@
   width: 300px;
   height: 20px;
   margin: 10px;
+  border-radius: 5px;
+}
+
+.searchSection {
+  display: flex;
+  flex-direction: row;
+}
+
+.submitButton {
+  height: 30px;
+  background: green;
+  align-self: center;
+}
+
+.userInput {
 }
