--- a/lib/css/welcome.scss
+++ b/lib/css/welcome.scss
@@ -5,10 +5,17 @@
 }
 
 .userInput {
+  font-size: 16px;
   width: 300px;
-  height: 20px;
-  margin: 10px;
+  height: 30px;
+  margin: 5px;
   border-radius: 5px;
+  outline: none;
+  border: 1px solid gray;
+}
+
+::placeholder {
+  padding-left: 10px;
 }
 
 .searchSection {
@@ -17,9 +24,22 @@
 }
 
 .submitButton {
-  height: 30px;
+  height: 35px;
+  width: 35px;
   background: green;
+  color: white;
   align-self: center;
+  border-radius: 5px;
+  border: none;
+  &:focus {
+    outline: none;
+  }
+  &:hover {
+    background-color: white;
+    color: green;
+    border: 1px solid green;
+    cursor: pointer;
+  }
 }
 
 .userInput {
