--- a/lib/css/welcome.scss
+++ b/lib/css/welcome.scss
@@ -53,9 +53,17 @@
 
 .userInput {
 }
+
 .dataTable {
   margin-left: 20px;
 }
+
 .dataRow {
   margin: 5px;
+}
+
+.invalidCity {
+  display: flex;
+  justify-content: center;
+  margin: 20px auto;
 }
