--- a/lib/css/index.scss
+++ b/lib/css/index.scss
@@ -1,5 +1,8 @@
 @import 'reset.scss';
+@import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400i,700');
 @import 'variables.scss';
 @import 'mixins.scss';
 @import 'buttons.scss';
 @import 'welcome.scss';
+@import 'search-section';
+@import 'weather-card';
