--- a/lib/css/header.scss
+++ b/lib/css/header.scss
@@ -8,7 +8,7 @@
   justify-content: center;
 }
 
-.welcomeMessage {
+.mainHeader {
   display: flex;
   justify-content: center;
   padding-top: 20px;
