--- a/lib/css/weather-list.scss
+++ b/lib/css/weather-list.scss
@@ -1,3 +1,7 @@
+body {
+  font-family: $main-font;
+}
+
 .invalidCity {
   font-family: $main-font;
   display: block;
@@ -11,36 +15,32 @@
 }
 
 .weatherList {
-  margin: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 0px 20px;
+  margin: 0px 20px;
 }
 
 .dataTable {
   border-bottom: 1px dashed lightgray;
+  border-width: 60%;
   margin-bottom: 15px;
 }
 
 .locationHeader {
   font-family: $main-font;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 36px;
   margin: 20px auto;
 }
 
-.weather-date {
-  width: 100px;
+#weather-date {
+  display: inline-block;
+
 }
 
-.weather {
+.weatherData {
   padding: 10px;
   width: 150px;
-}
-
-.weather-temp {
-  width: 40px;
 }
 
 .weather-summary {
@@ -50,3 +50,12 @@
   color: gray;
   padding-bottom: 20px;
 }
+
+.weatherHeader {
+  font-weight: 800;
+  font-size: 20px;
+}
+
+// .topRow {
+//   position: fixed;
+// }
