--- a/lib/css/index.scss
+++ b/lib/css/index.scss
@@ -2,7 +2,9 @@
 @import 'fonts';
 @import 'variables';
 @import 'mixins';
+@import 'media-queries';
 @import 'header';
 @import 'buttons';
 @import 'welcome';
 @import 'weather-list';
+@import 'weather-card';
