--- a/lib/css/media-queries.scss
+++ b/lib/css/media-queries.scss
@@ -1,3 +1,17 @@
-@media screen and (min-width: 500px) and (max-width: 300px) {
+@media screen and (max-width: 450px) {
+  .weatherData {
+    width: 100%;
+    display: block;
+    align-content: center;
+  }
 
+  .weatherHeader {
+    display: none;
+  }
+
+  .weatherAlert {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
