Change background and button colors to be better visible

--- a/lib/css/variables.scss
+++ b/lib/css/variables.scss
@@ -1,4 +1,4 @@
 $main-font: 'Quattrocento Sans', sans-serif;
 $header-font: 'Sonsie One', cursive;
-
-$button-main-color: #0DD491;
+$button-main-color: #1ebc3d;
+$background-color: #c0c8d6;
