--- a/lib/css/weather-card.scss
+++ b/lib/css/weather-card.scss
@@ -11,6 +11,7 @@
 }
 
 .weatherData {
+  font-size: 18px;
   padding: 10px;
   width: 110px;
   text-align: center;
@@ -40,7 +41,15 @@
   background-color: #f4b4b2;
   padding: 10px;
   text-align: left;
-  margin-bottom: 10px;
+  margin: 20px auto 40px auto;
+}
+
+.warningMessage {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 800;
+  color: red;
+  padding: 5px auto;
 }
 
 .hourlyCard {
